--- a/src/content/blog/New-Post.mdx
+++ b/src/content/blog/New-Post.mdx
@@ -1,5 +1,5 @@
 ---
-heroImage: /src/assets/images/uploads/GePOzz4W8AAXqjf.jpeg
+heroImage: /public/project.png
 category: Category 1
 description: Description of new post
 pubDate: 2024-12-28T12:59:59.112Z
