--- a/src/content/blog/NodeGUI.mdx
+++ b/src/content/blog/NodeGUI.mdx
@@ -5,7 +5,7 @@ pubDate: 'Jul 02 2022'
 description: Let's have a look at NodeGUI, NordVPN and Node.js
 canonical_url: "https://gregbenner.life/scratch-the-surface-of-node-gui/"
 tags: ["nodejs", "nordvpn", "nodegui"]
-cover_image: https://dev-to-uploads.s3.amazonaws.com/i/7b6ld2c3bl65co0l6d5t.png
+heroImage: /public/project.png
 author: src/content/author/greg.mdx
 ---
 
