--- a/src/content/blog/NodeGUI.mdx
+++ b/src/content/blog/NodeGUI.mdx
@@ -7,6 +7,7 @@ canonical_url: "https://gregbenner.life/scratch-the-surface-of-node-gui/"
 tags: ["nodejs", "nordvpn", "nodegui"]
 heroImage: /public/project.png
 author: src/content/author/greg.mdx
+category: Category 1
 ---
 
 I’ve ported my little demo app from [Proton Native](http://proton-native.js.org/) to [NodeGUI](https://github.com/nodegui/awesome-nodegui/) to see what the API and ecosystem are like. First impressions are this is a very powerful framework with a plethora of possibilities. It comes in two flavours vanilla js and [react](http://react.nodegui.org/). I have a love hate with react right now but it makes a lot more sense and was actually pleasant to code with. The API reminds me a lot of React Native unsurprisingly it borrows some things from it.
