--- a/src/content/blog/SEO starter kit.mdx
+++ b/src/content/blog/SEO starter kit.mdx
@@ -1,11 +1,12 @@
 ---
 title: SEO starter kit
 published: true
-date: 2023-01-01
-pubDate: 'Jul 02 2022'
+pubDate: 2023-01-01
+#pubDate: 'Jul 02 2022'
 description: what do you need for an effective indexable "google-able" site
 tags: [seo, beginners, html]
 heroImage: /public/project.png
+category: Category 1
 ---
 
 # SEO starter kit
