--- a/src/content/blog/WebView Apps on your OS.mdx
+++ b/src/content/blog/WebView Apps on your OS.mdx
@@ -6,6 +6,8 @@ published: true
 description: "An exploration of webview apps for desktop"
 tags: ["webgap", "electron", "nodegui", "webview"]
 canonical_url: "https://gregbenner.life/web-view-apps-on-your-os/"
+category: Category 1
+
 ---
 
 I personally am very excited by the idea of making applications in HTML, css, and js that efficiently run on the desktop. Electron and nw.js are the most mature, robust projects at present. They are both awesome solutions but if you are looking for more of a light weight solution that's what I'm going to explore in this post. The possible downside of both previously mentioned solutions is the package size, it's over 200mb's, this is fine for some modern computers with terabytes of space, I personally have a 200gb harddrive on my AeroBook Plus (an interesting indiegogo laptop I recently backed).
