--- a/src/content/blog/WebView Apps on your OS.mdx
+++ b/src/content/blog/WebView Apps on your OS.mdx
@@ -1,13 +1,12 @@
 ---
-title: "WebView Apps on your OS"
+title: 'WebView Apps on your OS'
 date: 2023-01-01
 pubDate: 'Jul 02 2022'
 published: true
-description: "An exploration of webview apps for desktop"
-tags: ["webgap", "electron", "nodegui", "webview"]
-canonical_url: "https://gregbenner.life/web-view-apps-on-your-os/"
+description: 'An exploration of webview apps for desktop'
+tags: ['webgap', 'electron', 'nodegui', 'webview']
+canonical_url: 'https://gregbenner.life/web-view-apps-on-your-os/'
 category: Category 1
-
 ---
 
 I personally am very excited by the idea of making applications in HTML, css, and js that efficiently run on the desktop. Electron and nw.js are the most mature, robust projects at present. They are both awesome solutions but if you are looking for more of a light weight solution that's what I'm going to explore in this post. The possible downside of both previously mentioned solutions is the package size, it's over 200mb's, this is fine for some modern computers with terabytes of space, I personally have a 200gb harddrive on my AeroBook Plus (an interesting indiegogo laptop I recently backed).
@@ -41,27 +40,27 @@ package.json
 index.js
 
 ```js
-const { app, BrowserWindow } = require("deskgap");
+const { app, BrowserWindow } = require('deskgap')
 
-app.once("ready", () => {
-  const win = new BrowserWindow();
-  win.loadFile("index.html");
-});
+app.once('ready', () => {
+	const win = new BrowserWindow()
+	win.loadFile('index.html')
+})
 ```
 
 index.html
 
 ```html
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Hello DeskGap</title>
-  </head>
-  <body>
-    <h1>Hello DeskGap</h1>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Hello DeskGap</title>
+	</head>
+	<body>
+		<h1>Hello DeskGap</h1>
+	</body>
 </html>
 ```
 
@@ -76,31 +75,31 @@ This is pretty powerful already you can imagine you can have you basic HTML call
 Simply adjusting a few lines from the example above we can make use of exec from node.js to spawn a child process and run our arbitrary command line code. I also researched the API documents of DeskGap to set a title and icon.
 
 ```js
-const { app, BrowserWindow } = require("deskgap");
-const util = require("util");
-const exec = util.promisify(require("child_process").exec);
+const { app, BrowserWindow } = require('deskgap')
+const util = require('util')
+const exec = util.promisify(require('child_process').exec)
 
 async function vueui() {
-  const { stdout, stderr } = await exec("./node_modules/.bin/vue ui -headless");
-  console.log("stdout:", stdout);
-  console.log("stderr:", stderr);
+	const { stdout, stderr } = await exec('./node_modules/.bin/vue ui -headless')
+	console.log('stdout:', stdout)
+	console.log('stderr:', stderr)
 }
 
-vueui();
+vueui()
 
-app.once("ready", () => {
-  const win = new BrowserWindow({
-    width: 1000,
-    height: 600,
-    title: "Vue CLI",
-    icon: "vue-logo.png",
-    titleBarStyle: "hidden",
-  });
-  win.loadURL("http://localhost:8000");
-});
+app.once('ready', () => {
+	const win = new BrowserWindow({
+		width: 1000,
+		height: 600,
+		title: 'Vue CLI',
+		icon: 'vue-logo.png',
+		titleBarStyle: 'hidden'
+	})
+	win.loadURL('http://localhost:8000')
+})
 ```
 
-<img src="https://res.cloudinary.com/https-gregbenner-life/image/upload/v1594764223/Screenshot_from_2020-07-12_21-43-10_luayzl.png" />
+<img src='https://res.cloudinary.com/https-gregbenner-life/image/upload/v1594764223/Screenshot_from_2020-07-12_21-43-10_luayzl.png' />
 
 All in all at this point I'm feeling pretty happy with myself and the world, everything. The next step ends in a cliffhanger so be forewarned. It's more of an exploration of what I imagine a separates a senior developer from a junior. I'm going to explore the build and package steps of releasing this app as an executable binary (double clickable app).
 
@@ -162,7 +161,7 @@ package.json
 }
 ```
 
-## Steps[¶](https://deskgap.com/building/#steps "Permanent link")
+## Steps[¶](https://deskgap.com/building/#steps 'Permanent link')
 
 1.  Download the npm dependencies: `npm ci`
 2.  Generate the buildsystem:
