--- a/src/content/blog/NodeGUI.mdx
+++ b/src/content/blog/NodeGUI.mdx
@@ -3,8 +3,8 @@ title: Scratch the Surface of NodeGUI
 published: true
 pubDate: 'Jul 02 2022'
 description: Let's have a look at NodeGUI, NordVPN and Node.js
-canonical_url: "https://gregbenner.life/scratch-the-surface-of-node-gui/"
-tags: ["nodejs", "nordvpn", "nodegui"]
+canonical_url: 'https://gregbenner.life/scratch-the-surface-of-node-gui/'
+tags: ['nodejs', 'nordvpn', 'nodegui']
 heroImage: /public/project.png
 author: src/content/author/greg.mdx
 category: Category 1
@@ -12,35 +12,29 @@ category: Category 1
 
 I’ve ported my little demo app from [Proton Native](http://proton-native.js.org/) to [NodeGUI](https://github.com/nodegui/awesome-nodegui/) to see what the API and ecosystem are like. First impressions are this is a very powerful framework with a plethora of possibilities. It comes in two flavours vanilla js and [react](http://react.nodegui.org/). I have a love hate with react right now but it makes a lot more sense and was actually pleasant to code with. The API reminds me a lot of React Native unsurprisingly it borrows some things from it.
 
-There are some similarities with Proton Native like the layout engine (Yoga flexbox) but right now in my opinion NodeGUI is much more polished and finished. There were a few deal breakers for me with PN also like I wanted an event fired when the window closed so I can clean up any running processes. Luckily NG [provides](https://github.com/nodegui/nodegui/issues/658#event-3640138822).  Again I won’t detail the getting started but cloning this [repo](https://github.com/nodegui/nodegui-starter), installing the dependencies then one shell npm run dev and another npm start. One last point for NG over PN is the final app is around 40mb bundled versus 120mb+.
+There are some similarities with Proton Native like the layout engine (Yoga flexbox) but right now in my opinion NodeGUI is much more polished and finished. There were a few deal breakers for me with PN also like I wanted an event fired when the window closed so I can clean up any running processes. Luckily NG [provides](https://github.com/nodegui/nodegui/issues/658#event-3640138822). Again I won’t detail the getting started but cloning this [repo](https://github.com/nodegui/nodegui-starter), installing the dependencies then one shell npm run dev and another npm start. One last point for NG over PN is the final app is around 40mb bundled versus 120mb+.
 
 Below is the app I’m hacking together for fun:
 
-
 ![](https://paper-attachments.dropbox.com/s_9D48D52E2A41BFE67D2B3925C3967573F29995713F016E8D85C26EA6C7190FB6_1597500816777_Screenshot+from+2020-08-15+10-13-23.png)
-
 
 I’m using some of nordvpn’s [undocumented](https://blog.sleeplessbeastie.eu/2019/02/18/how-to-use-public-nordvpn-api/) APIs and the official CLI tool to muddle this together. Things like connect and disconnect work, also the country flag emoji shows your current country connection. There is a custom icon in the dock and a statusbar icon.
 
 Some of the non-typical React things I’ve got going on are making use of mobx to wrap stateless functional components or whatever they are called now
 
-```
-    const Toggle = observer(() => (
-      <View id="toggleContainer">
-        <View id="toggle" style={backgroundToggleStyle()}>
-          <Button
-            id="toggleButton"
-            style={toggleStyle()}
-            on={buttonHandler}
-          ></Button>
-        </View>
-      </View>
-    ));
+```js
+const Toggle = observer(() => (
+	<View id='toggleContainer'>
+		<View id='toggle' style={backgroundToggleStyle()}>
+			<Button id='toggleButton' style={toggleStyle()} on={buttonHandler}></Button>
+		</View>
+	</View>
+))
 ```
 
 I love [mobx](https://mobx.js.org/README.html) because like vue it has elegant computed properties like so
 
-```
+```js
      @computed
       get isOffline() {
         return (
@@ -49,12 +43,12 @@ I love [mobx](https://mobx.js.org/README.html) because like vue it has elegant c
         );
       }
 ```
+
 This isOffline is watching `@observable status` and updating automatically.
 
 With this app I am spinning up and down and all around a lot of child processes, I found this library simplified my life [execa](https://github.com/sindresorhus/execa). Here’s an example
 
-
-``` const { stdout } = await execa("nordvpn", ["countries"]);```
+` const { stdout } = await execa("nordvpn", ["countries"]);`
 
 Glorious async/await!
 
@@ -87,9 +81,9 @@ I was doing some more crazy pipping stuff with the [jq](https://stedolan.github.
       });
     }
 ```
+
 To get that little flag at the top I check the status of the connection and if not disconnected I do some dark arts with String manipulation to take
 “Connecting to Japan #547 (jp547.nordvpn.com)” and get the country code “jp”
-
 
                 .trim("")
                 .replace(/\r?\n|\r/g, "")
@@ -101,11 +95,3 @@ I also have buttons with each country listed to allow different connections. I h
 So the only downsides right now I think are missing examples and documentation. The library is typed and that is about all the docs you get for most components. Some are shown well such as [Button](https://react.nodegui.org/docs/api/interfaces/buttonprops) others are a mystery [ScrollArea](https://react.nodegui.org/docs/api/interfaces/scrollareaprops) (it says every prop is optional)
 
 All in all a pretty amazing framework, with the power of node.js and any plugin the sky is the limit.
-
-
-
-
-
-
-
-
