--- a/src/content/blog/NodeGUI.mdx
+++ b/src/content/blog/NodeGUI.mdx
@@ -6,7 +6,7 @@ description: Let's have a look at NodeGUI, NordVPN and Node.js
 canonical_url: 'https://gregbenner.life/scratch-the-surface-of-node-gui/'
 tags: ['nodejs', 'nordvpn', 'nodegui']
 heroImage: /public/project.png
-author: src/content/author/greg.mdx
+author: greg
 category: Category 1
 ---
 
