--- a/src/content/blog/OpenFaas.mdx
+++ b/src/content/blog/OpenFaas.mdx
@@ -6,7 +6,7 @@ pubDate: 2022-07-01T23:00:00.000Z
 tags:
   - serverless
   - lambda
-author: src/content/author/greg.mdx
+author: greg
 title: OpenFaas
 ---
 
