--- a/src/content/blog/NodeGUI.mdx
+++ b/src/content/blog/NodeGUI.mdx
@@ -3,7 +3,7 @@ title: Scratch the Surface of NodeGUI
 published: true
 pubDate: 'Jul 02 2022'
 description: Let's have a look at NodeGUI, NordVPN and Node.js
-canonical_url: 'https://gregbenner.life/scratch-the-surface-of-node-gui/'
+canonical_url: 'https://jswhisperer.uk/post/scratch-the-surface-of-node-gui/'
 tags: ['nodejs', 'nordvpn', 'nodegui']
 heroImage: /public/project.png
 author: greg
