--- a/src/content/blog/Proton Native.mdx
+++ b/src/content/blog/Proton Native.mdx
@@ -14,7 +14,7 @@ author: greg
 title: Proton Native
 ---
 
-I mentioned Proton Native [earlier](https://gregbenner.life/web-view-apps-on-your-os/) but hadn’t tried it extensively until now.
+I mentioned Proton Native [earlier](https://jswhisperer.uk/post/web-view-apps-on-your-os/) but hadn’t tried it extensively until now.
 
 So what is it, here are some of the promises
 
