--- a/src/content/blog/Somewhat Progressive Web Apps.mdx
+++ b/src/content/blog/Somewhat Progressive Web Apps.mdx
@@ -10,7 +10,7 @@ tags:
 title: Somewhat Progressive Web Apps
 ---
 
-In my last [post](https://gregbenner.life/web-view-apps-on-your-os/)  I explored a few ideas for using desktop native webviews to contain a webapp. There are some pros and cons to said approach, off the top of my head I'd say the pros are smaller app sizes (than what I'm going to share later in the post) and portability of the app; you can distribute it. A con of that approach might be if you just need a PWA you can open chrome > click more tools > create shortcut. This approach will yield a very small app size, but no portability.
+In my last [post](/post/web-view-apps-on-your-os/) I explored a few ideas for using desktop native webviews to contain a webapp. There are some pros and cons to said approach, off the top of my head I'd say the pros are smaller app sizes (than what I'm going to share later in the post) and portability of the app; you can distribute it. A con of that approach might be if you just need a PWA you can open chrome > click more tools > create shortcut. This approach will yield a very small app size, but no portability.
 
 So let's explore an interesting tool I found that might be the right solution for your use case. [PWABuilder](https://www.pwabuilder.com/)
 ![pwa builder](https://www.pwabuilder.com/_nuxt/img/new-logo.39c5508.svg)
@@ -34,7 +34,7 @@ Well not exactly, whichever platform you choose to download, I tried android, wi
 
 Ok for macOS you can open /projects/mac/MacOSpwa.xcodeproj with xcode you will also need to move the manifest.json (/projects/mac/source/app/src/main/assets/) and files into a folder called PWAinfo, since there is a bug currently [https://github.com/pwa-builder/PWABuilder/issues/1008](https://github.com/pwa-builder/PWABuilder/issues/1008) I found that out the hard way. Click the > arrow to build and run the project. A .app file is also generated for you.
 
-For windows there was a few more steps [missing](https://github.com/pwa-builder/PWABuilder/issues/1007). Firstly you need to [enable "Developer mode"](https://www.howtogeek.com/292914/what-is-developer-mode-in-windows-10/) I never heard of that before. What helped me with the rest of the steps was [this post](https://medium.com/@ricardobokove/test-your-pwa-generated-by-pwabuilder-on-windows-10-68a63b513975) You will need to run **test\_install.ps1** in powershell, you will 100% get an error "Missing AppxManifest.xml" open the .ps1 file and update the location of AppxManifest.xml to the full path `C:/Users...` run the script again and you should have a sort of PWA on windows.
+For windows there was a few more steps [missing](https://github.com/pwa-builder/PWABuilder/issues/1007). Firstly you need to [enable "Developer mode"](https://www.howtogeek.com/292914/what-is-developer-mode-in-windows-10/) I never heard of that before. What helped me with the rest of the steps was [this post](https://medium.com/@ricardobokove/test-your-pwa-generated-by-pwabuilder-on-windows-10-68a63b513975) You will need to run **test_install.ps1** in powershell, you will 100% get an error "Missing AppxManifest.xml" open the .ps1 file and update the location of AppxManifest.xml to the full path `C:/Users...` run the script again and you should have a sort of PWA on windows.
 
 I haven't tried it but theroeticlly if you have a windows developer license you can skip all the above and submit it to the store directly from PWA builder by clicking generate under the the download section and filling out the fields.
 
