--- a/src/content/blog/WebView Apps on your OS.mdx
+++ b/src/content/blog/WebView Apps on your OS.mdx
@@ -5,7 +5,7 @@ pubDate: 'Jul 02 2022'
 published: true
 description: 'An exploration of webview apps for desktop'
 tags: ['webgap', 'electron', 'nodegui', 'webview']
-canonical_url: 'https://gregbenner.life/web-view-apps-on-your-os/'
+canonical_url: 'https://jswhisperer.uk/post/web-view-apps-on-your-os/'
 category: Category 1
 ---
 
