--- a/src/content/blog/Somewhat Progressive Web Apps.mdx
+++ b/src/content/blog/Somewhat Progressive Web Apps.mdx
@@ -8,6 +8,7 @@ pubDate: 2022-07-01T23:00:00.000Z
 tags:
   - pwa
 title: Somewhat Progressive Web Apps
+author: greg
 ---
 
 In my last [post](/post/web-view-apps-on-your-os/) I explored a few ideas for using desktop native webviews to contain a webapp. There are some pros and cons to said approach, off the top of my head I'd say the pros are smaller app sizes (than what I'm going to share later in the post) and portability of the app; you can distribute it. A con of that approach might be if you just need a PWA you can open chrome > click more tools > create shortcut. This approach will yield a very small app size, but no portability.
