--- a/src/content/blog/Caddy 2.mdx
+++ b/src/content/blog/Caddy 2.mdx
@@ -1,5 +1,6 @@
 ---
-heroImage: /src/assets/images/uploads/7b6ld2c3bl65co0l6d5t.png
+heroImage: >-
+  /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_i_7b6ld2c3bl65co0l6d5t.jpeg
 category: Category 1
 description: >-
   Node.js is beautiful and brilliant. It takes a mature developer to admit where
@@ -17,7 +18,7 @@ title: Caddy 2 server the silver bullet of serving
 
 ## Caddy 2 server the silver bullet of serving
 
-*First and foremost this post is about a Go-lang server; wait it will be in a node.js context!*
+_First and foremost this post is about a Go-lang server; wait it will be in a node.js context!_
 
 Node.js is beautiful and brilliant. It takes a mature developer to admit where something shines and where it could use some help. With every language, or library the authors make some choices on where it should it shine and what can lag.
 
