--- a/src/content/blog/Proton Native.mdx
+++ b/src/content/blog/Proton Native.mdx
@@ -1,5 +1,6 @@
 ---
-heroImage: /public/project.png
+heroImage: >-
+  /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0f0arenmyx88zjd8tvtz.jpg
 category: Category 1
 description: >-
   Take an adventure with me creating a Proton Native app that uses node.js to
