--- a/src/content/author/greg.mdx
+++ b/src/content/author/greg.mdx
@@ -1,6 +1,6 @@
 ---
-name: greg
-avatar: '/greg.jpeg'
-url: 'http://x.com'
 bio: ''
+name: greg
+url: 'http://x.com'
+avatar: /src/assets/images/uploads/greg.jpeg
 ---
