--- a/src/content/blog/Frontend Devs.mdx
+++ b/src/content/blog/Frontend Devs.mdx
@@ -20,7 +20,7 @@ I will start with exploring myself since it’s a topic I know well. I actually 
 
 If I was to now abstract what the ingredients are that made me into a good FED. I would say for one thing my lack of a Computer Science degree. Personally I don’t know anyone with one that does Front End vs Backend. Secondly I am a computer hobbyist, hacking, trial and error and a large capacity for frustration lead to me enjoying cross browser quirks and melding CSS to my will. I love that feeling of success after an hour of not getting it. I think this one is a bit up to the individual but I think a design background or at least a strong interest in design in nessisary. Look if you don’t care that much or don’t notice down to the minute pixel detail, maybe you should be doing the backend. FED’s are essentially translator’s we take a good designers work, and make it better, then glue it to the backend. I’m biased but I would say we are the most responsable in a project, at the end of the day it isn’t the design your client is testing and it isn’t the database schema neither.
 
-Now if I think about my friends who are FED’s I can see a trend they are also hobby computerists, some have design backgrounds, none have a CS degree. I see a trend. So what makes this combo rare? If you think about it there isn’t a Front End Development degree that I’m aware of, that means in high school you probably aren’t even that aware what it is. You can’t currently go and take a course, but your parents want you to so you, if interested in programming take CS. *Disclaimer* there is nothing wrong with CS, I hope to one day take a degree in it. However you now have been trained analytically for 3-4 years and have little experience working with photoshop or ‘the view layer’. You also probably now realise you can get paid a significant amount more to be a Back End Developer. This may change…
+Now if I think about my friends who are FED’s I can see a trend they are also hobby computerists, some have design backgrounds, none have a CS degree. I see a trend. So what makes this combo rare? If you think about it there isn’t a Front End Development degree that I’m aware of, that means in high school you probably aren’t even that aware what it is. You can’t currently go and take a course, but your parents want you to so you, if interested in programming take CS. _Disclaimer_ there is nothing wrong with CS, I hope to one day take a degree in it. However you now have been trained analytically for 3-4 years and have little experience working with photoshop or ‘the view layer’. You also probably now realise you can get paid a significant amount more to be a Back End Developer. This may change…
 
 There is no mechanism at this time to create a Front End Developer other than this random act of change I described, that is why we are such a rare sought after breed. I think in the next couple years this will completely flip, thanks to the great work at CodeSchool, TreeHouse, and CodeAcademy. The idea of free university learning is also taking off and as Coursera matures, it will also become a great place to learn FED concepts.
 
