--- a/src/content/author/greg.mdx
+++ b/src/content/author/greg.mdx
@@ -1,6 +1,6 @@
 ---
 bio: ''
 name: greg
-url: 'http://x.com'
+url: 'https://jswhisperer.uk/author/greg'
 avatar: /src/assets/images/uploads/greg.jpeg
 ---
