--- a/src/content/blog/You dont mention, webmentions.mdx
+++ b/src/content/blog/You dont mention, webmentions.mdx
@@ -2,6 +2,7 @@
 heroImage: /src/assets/images/uploads/7b6ld2c3bl65co0l6d5t.png
 category: Category 1
 description: A whirlwind intro to webmentions
+author: greg
 pubDate: 2022-07-01T23:00:00.000Z
 tags:
   - frontend
