--- a/src/content/blog/Caddy 2.mdx
+++ b/src/content/blog/Caddy 2.mdx
@@ -56,4 +56,4 @@ And just like that you are likely to get 100 lighthouse score on google served o
 
 [Here's](https://caddyserver.com/v2) more information about Caddy, hope this helps!
 
-Comments and retweets welcome [https://twitter.com/cactusanddove/status/1274861623094763531?s=20](https://twitter.com/cactusanddove/status/1274861623094763531?s=20)
+follow my ~twitter~ bluesky [https://bsky.app/profile/jswhisperer.bsky.social](https://bsky.app/profile/jswhisperer.bsky.social)
