--- a/src/content/blog/Frontend Devs.mdx
+++ b/src/content/blog/Frontend Devs.mdx
@@ -27,4 +27,4 @@ There is no mechanism at this time to create a Front End Developer other than th
 
 So if you are a business, or you are a guy with a cool app idea, or you’re my Uncle who needs a blog asap, Hopefully this explains why it’s hard to find us; why we are always busy.
 
-follow my twitter [https://twitter.com/cactusanddove](https://twitter.com/cactusanddove)
+follow my ~twitter~ bluesky [https://bsky.app/profile/jswhisperer.bsky.social](https://bsky.app/profile/jswhisperer.bsky.social)
