--- a/src/content/blog/Somewhat Progressive Web Apps.mdx
+++ b/src/content/blog/Somewhat Progressive Web Apps.mdx
@@ -39,4 +39,6 @@ For windows there was a few more steps [missing](https://github.com/pwa-builder/
 
 I haven't tried it but theroeticlly if you have a windows developer license you can skip all the above and submit it to the store directly from PWA builder by clicking generate under the the download section and filling out the fields.
 
-Comments and Questions are appreciated! [https://twitter.com/cactusanddove/status/1291086540672774145](https://twitter.com/cactusanddove/status/1291086540672774145)
+Comments and Questions are appreciated!
+
+follow my ~twitter~ bluesky [https://bsky.app/profile/jswhisperer.bsky.social](https://bsky.app/profile/jswhisperer.bsky.social)
