--- a/src/content/blog/Get started with Nuxt.mdx
+++ b/src/content/blog/Get started with Nuxt.mdx
@@ -1,6 +1,6 @@
 ---
 heroImage: /src/assets/images/uploads/7b6ld2c3bl65co0l6d5t.png
-category: Category 1
+category: JavaScript
 description: >-
   This is my goto stack Nuxt.js which is server side rendered framework around
   vue. It plays on Next.js from the React world. At the end you’ll have a super
