--- a/src/content/blog/NodeGUI.mdx
+++ b/src/content/blog/NodeGUI.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: >-
   /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_i_7b6ld2c3bl65co0l6d5t.jpeg
-category: Category 1
+category: JavaScript
 description: "Let's have a look at NodeGUI, NordVPN and Node.js"
 pubDate: 2022-07-01T23:00:00.000Z
 tags:
