--- a/src/content/blog/Somewhat Progressive Web Apps.mdx
+++ b/src/content/blog/Somewhat Progressive Web Apps.mdx
@@ -1,6 +1,6 @@
 ---
 heroImage: /src/assets/images/uploads/7b6ld2c3bl65co0l6d5t.png
-category: Category 1
+category: JavaScript
 description: >-
   Continuing with my seemingly obsession with web apps on the desktop, let's
   explore another few routes to success, their pros and cons.
