--- a/src/content/blog/Caddy 2.mdx
+++ b/src/content/blog/Caddy 2.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: >-
   /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_i_7b6ld2c3bl65co0l6d5t.jpeg
-category: Category 2
+category: JavaScript
 description: >-
   Node.js is beautiful and brilliant. It takes a mature developer to admit where
   something shines and where it could use some help. With every language, or
