--- a/src/content/blog/Frontend Devs.mdx
+++ b/src/content/blog/Frontend Devs.mdx
@@ -1,6 +1,6 @@
 ---
 heroImage: /src/assets/images/uploads/7b6ld2c3bl65co0l6d5t.png
-category: Category 1
+category: JavaScript
 description: A quest to figure out what makes Front End Developers a rare commodity.
 pubDate: 2022-07-01T23:00:00.000Z
 author: greg
