--- a/src/content/blog/Proton Native.mdx
+++ b/src/content/blog/Proton Native.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: >-
   /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0f0arenmyx88zjd8tvtz.jpg
-category: Category 1
+category: JavaScript
 description: >-
   Take an adventure with me creating a Proton Native app that uses node.js to
   communicate with cli. Hear about the pros and cons of Proton Native.
