--- a/src/content/blog/Revisiting My First Homepage.mdx
+++ b/src/content/blog/Revisiting My First Homepage.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: >-
   /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_tc5vcx1t4kfoget0917e.png
-category: Category 1
+category: JavaScript
 description: revisit my first homepage from 2009
 pubDate: 2022-07-01T23:00:00.000Z
 tags:
@@ -9,7 +9,10 @@ tags:
   - performance
 author: greg
 title: My First Homepage
+blskyid: 3lfdi6k3guk2v
 ---
+
+import { BlueskyPost, LinkPreview } from 'astro-embed'
 
 I had to the [wayback internet archive](https://web.archive.org/) to find a snapshot from 2009.
 
@@ -27,6 +30,7 @@ I hosted my old site for fun please be gentle, haha kidding I can take a critiqu
 Some of the "advanced" stuff at the time I employed was my own custom icon font, async non blocking js loading, and inline base64 small images.
 
 Checkout all the sides below, cheers!
+{/* <LinkPreview id="https://www.slideshare.net/slideshow/embed_code/key/bp2lH3IXkwxTQM?startSlide=1" style='border:1px solid #CCC; border-width:1px; margin-bottom:5px;max-width: 100%;' /> */}
 
 <iframe
 	src='https://www.slideshare.net/slideshow/embed_code/key/bp2lH3IXkwxTQM?startSlide=1'
@@ -55,4 +59,5 @@ Checkout all the sides below, cheers!
 			Gregory Benner
 		</a>
 	</strong>
+	<BlueskyPost id='https://bsky.app/profile/jswhisperer.bsky.social/post/3lfdi6k3guk2v' />
 </div>
