--- a/src/content/blog/SEO starter kit.mdx
+++ b/src/content/blog/SEO starter kit.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: >-
   /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0f0arenmyx88zjd8tvtz.jpg
-category: Category 1
+category: JavaScript
 description: what do you need for an effective indexable "google-able" site
 pubDate: 2023-01-01T00:00:00.000Z
 tags:
