--- a/src/content/blog/Sharing is Caring.mdx
+++ b/src/content/blog/Sharing is Caring.mdx
@@ -3,7 +3,7 @@ cover_image: https://dev-to-uploads.s3.amazonaws.com/i/7b6ld2c3bl65co0l6d5t.png
 
 heroImage: >-
   /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0f0arenmyx88zjd8tvtz.jpg
-category: Category 1
+category: JavaScript
 description: 'Quick tip to add awesome sharing to your app'
 pubDate: 2023-01-01T00:00:00.000Z
 tags: ['frontend', 'webshare', 'javascript', 'pwa']
