--- a/src/content/blog/WebView Apps on your OS.mdx
+++ b/src/content/blog/WebView Apps on your OS.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: >-
   /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0f0arenmyx88zjd8tvtz.jpg
-category: Category 1
+category: JavaScript
 author: greg
 description: An exploration of webview apps for desktop
 pubDate: 2022-07-01T23:00:00.000Z
