--- a/src/content/blog/Revisiting My First Homepage.mdx
+++ b/src/content/blog/Revisiting My First Homepage.mdx
@@ -12,7 +12,7 @@ title: My First Homepage
 blskyid: 3lfdi6k3guk2v
 ---
 
-import { BlueskyPost, LinkPreview } from 'astro-embed'
+import { BlueskyPost } from 'astro-embed'
 
 I had to the [wayback internet archive](https://web.archive.org/) to find a snapshot from 2009.
 
