--- a/src/content/blog/Caddy 2.mdx
+++ b/src/content/blog/Caddy 2.mdx
@@ -30,7 +30,7 @@ HTTP/2 really shines with serving static assets, in the past with HTTP/1 we used
 I've been using Caddy since the early v1 days, there are a few feature I miss that haven't landed in v2 yet; such as protecting routes with JWT via a plugin. Overall if you are creating a new project you should use V2.
 
 Getting started!
-You can download the binary [here](https://caddyserver.com/docs/download) or use the handy [DigitalOcean](https://digitalocean.com) [droplet](https://marketplace.digitalocean.com/apps/caddy)
+[You can download the binary](https://caddyserver.com/docs/download) or use the handy [DigitalOcean](https://digitalocean.com) [droplet](https://marketplace.digitalocean.com/apps/caddy)
 
 For me a common use case of Caddy is as a static file server and a reverse proxy for my backend services. Here's what works for me as "Caddyfile" the yaml edition of the configuration file
 
